# OpenGL_CarGUI_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plot_cpu_usage.gp  run_test.sh
doc/: datasender.md
docs/: datasender.md
sender/: DataSender_TCP_vec_occ_cpp.py
sender/data/my_surocc/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  25.npy  26.npy  27.npy  28.npy  29.npy  3.npy  30.npy  31.npy  32.npy  33.npy  34.npy  35.npy  36.npy  37.npy  38.npy  39.npy  4.npy  40.npy  41.npy  42.npy  43.npy  44.npy  (+41 more)
src/: config.cpp  config.h  glad.c  main.cpp
src/controller/: app.cpp  app.h  drawing.cpp
src/factories/: factory.cpp  factory.h
src/shaders/: fragment.txt  fragment_ego_uni.frag  shader.h  vertex.txt  vertex_i.txt
src/systems/: camera_system.cpp  camera_system.h  render_system.cpp  render_system.h
src/threads/: socket_thread.cpp  socket_thread.h
src/view/: shader.cpp  shader.h
